# quantinemo

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  Makefile  README.md  basicsimulation.h  changelog.tex  coal_deme.h  fileservices.cpp  functions.cpp  genealogy.cpp  handler.h  indfactory.h  individual.cpp  individual.h  lce_breed.cpp  lce_breed.h  lce_coalescence.cpp  lce_coalescence.h  lce_coalescence_base.cpp  lce_disperse.cpp  lce_disperse.h  lce_extinction.cpp  lce_extinction.h  lce_regulation.h  main.cpp  metapop.cpp  metapop_sh.cpp  metapop_sh.h  myexcept.h  newmatnl.cpp  newmatrm.h  node.h  param.cpp  patch.cpp  patch.h  precisio.h  random.h  simcomponent.h  (+18 more)
.github/workflows/: build.yml
doc/: developer_guide.md
include/: basicsimulation.h  coal_deme.h  emit_json.h  filehandler.h  fileservices.h  functions.h  genealogy.h  handler.h  include.h  indfactory.h  lce_breed.h  lce_coalescence.h  lce_coalescence_base.h  lce_disperse.h  lce_extinction.h  lce_misc.h  lce_regulation.h  lifecycleevent.h  metapop.h  metapop_sh.h  mtrand.h  node.h  param.h  patch.h  random.h  randomC11.h  service.h  simcomponent.h  stat_rec_base.h  stathandler.h  stathandlerbase.h  statservices.h  tarray.h  tequation.h  tgenome.h  tindividual.h  tlocus.h  tmatrix.h  tmetapop.h  tpatchfitness.h  (+15 more)
src/: bandmat.cpp  basicsimulation.cpp  coal_deme.cpp  emit_json.cpp  emit_json_record.inc  filehandler.cpp  fileservices.cpp  functions.cpp  genealogy.cpp  indfactory.cpp  lce_breed.cpp  lce_coalescence.cpp  lce_coalescence_base.cpp  lce_disperse.cpp  lce_extinction.cpp  lce_misc.cpp  lce_regulation.cpp  main.cpp  metapop.cpp  metapop_sh.cpp  mtrand.cpp  myexcept.cpp  newmat6.cpp  newmat9.cpp  node.cpp  param.cpp  patch.cpp  stat_rec_base.cpp  stathandler.cpp  stathandlerbase.cpp  statservices.cpp  tequation.cpp  tgenome.cpp  tindividual.cpp  tlocus.cpp  tmatrix.cpp  tmetapop.cpp  tpatchfitness.cpp  tree.cpp  treplicate.cpp  (+10 more)
user manual/: .project  .texlipse
user manual/.svn/: wc.db
user manual/sources/: Mutation rate2.ppt  biblio.bib  plot_mutation_model.Rmd  quantiNemo2.bbl  quantiNemo2.tex  selection_pressure.r
